--- a/Landing Page/assets/style.css
+++ b/Landing Page/assets/style.css
@@ -56,6 +56,10 @@ video {
 .heading {
     font-family: Euro;
     position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     top: 38%;
     left: 13%;
     width: fit-content;
@@ -75,136 +79,27 @@ video {
     text-transform: uppercase;
 }
 
-@media (max-width: 780px) {
-    body {
-        overflow-x: hidden;
-    }
 
-    navbar a img {
-        height: 12vw;
-        margin-top: 2vw;
-    }
-
-    .page1 {
-        align-items: flex-start;
-        /* padding-top: 80px; */
-        /* To provide space for the navbar */
-    }
-
-    video {
-        height: 100vh;
-        object-fit: cover;
-    }
-
-    .heading {
-        top: 35%;
-        left: 8%;
-        width: 90%;
-        text-align: center;
-    }
-
-    .head1,
-    .head2 {
-        margin: 0;
-    }
-
-    .heading h1 {
-        font-size: 8vw;
-        letter-spacing: 0.5vw;
-    }
-}
-
-@media (max-width: 430px) {
-    body {
-        overflow-x: hidden;
-    }
-
-    navbar a img {
-        height: 16vw;
-        margin-top: 3vw;
-    }
-
-    .page1 {
-        align-items: flex-start;
-        /* padding-top: 60px; */
-        /* To provide space for the navbar */
-    }
-
-    video {
-        height: 100vh;
-        object-fit: cover;
-    }
-
-    .heading {
-        top: 38%;
-        left: 5%;
-        width: 90%;
-        text-align: center;
-    }
-
-    .head1,.head2 {
-        margin: 0;
-    }
-
-    .heading h1 {
-        font-size: 10vw;
-        letter-spacing: 0.3vw;
-    }
-}
-
-@media (max-width: 380px) {
-    body {
-        overflow-x: hidden;
-    }
-
-    navbar a img {
-        height: 18vw;
-        margin-top: 4vw;
-    }
-
-    .page1 {
-        align-items: flex-start;
-        /* padding-top: 60px; */
-        /* To provide space for the navbar */
-    }
-
-    video {
-        height: 100vh;
-        object-fit: cover;
-    }
-
-    .heading {
-        top: 38%;
-        left: 5%;
-        width: 90%;
-        text-align: center;
-    }
-
-    .heading h1 {
-        font-size: 12vw;
-        letter-spacing: 0.2vw;
-        line-height: 1.2;
-    }
-}
 
 .heading button {
     position: relative;
-    left: 40%;
-    margin-top: 2.5vw;
-    background: linear-gradient(150rad, #309c15, #6af249,#24770f );
+    
+    background: linear-gradient(120deg, #1c8303, #028011);
     color: #fff;
     font-size: 1.8vw;
     border: none;
-    font-family: Euro;
-    padding: .8vw 1.2vw;
+    font-family: EuroDemi;
+    padding: .8vw 1.7vw;
     border-radius: 1.5rem;
     cursor: pointer;
-    transition: size 0.5s ease-in-out;
+    transition: transform 0.5s ease-in-out;
+    /* Changed 'size' to 'transform' */
 }
 
-.heading button:hover{
-    background: linear-gradient(135rad, #d2fc38, #196506);
-    transform: scale(1.01);
+.heading button:hover {
+    background: linear-gradient(135deg, #67df04, #2fdb04c3);
+    /* Corrected rad to deg */
+    
 }
 
 .main-nav{
@@ -223,16 +118,17 @@ video {
     text-decoration: none;
     color: #fff;
     letter-spacing: .6vw;
-    font-size: 3.4vw;
+    font-size: 3.6vw;
+    font-weight: bolder;
     /* margin-bottom: 2vw; */
-    font-family: EuroBold;
+    font-family: EuroDemi;
     transition: color 0.2s ease-in-out;
     transition: 0.2s ease-in-out;
 }
 
 .main-nav a:hover {
     color: #6af249;
-    font-size: 3.6vw;
+    font-size: 3.8vw;
     cursor: pointer;
 }
 
