small changes in navbar

--- a/Landing Page/assets/style.css
+++ b/Landing Page/assets/style.css
@@ -124,6 +124,7 @@ video {
     font-family: EuroDemi;
     transition: color 0.2s ease-in-out;
     transition: 0.2s ease-in-out;
+    padding: 2px;
 }
 
 .main-nav a:hover {
