--- a/Landing Page/assets/style.css
+++ b/Landing Page/assets/style.css
@@ -150,3 +150,13 @@ video {
     transition: opacity 0.5s ease, transform 0.5s ease;
     /* Animation for opacity and transform */
 }
+
+.page2 {
+    min-height: 100vh;
+    width: 100%;
+    background: linear-gradient(135deg, #d0f7b1, #9df187c3);
+}
+
+.main-heading h1{
+    margin: 0;
+}
