--- a/Landing Page/assets/style.css
+++ b/Landing Page/assets/style.css
@@ -17,6 +17,14 @@ body {
     margin: 0;
 }
 
+body {
+    transition: opacity 0.5s ease-in-out;
+}
+
+body.fade-out {
+    opacity: 0;
+}
+
 body::-webkit-scrollbar {
     width: 0;
     /* Hide scrollbar in WebKit browsers */
@@ -114,7 +122,7 @@ navbar a img:hover{
 
 
 
-.heading button {
+.btn12 {
     position: relative;
     
     background: linear-gradient(120deg, #1c8303, #028011);
@@ -126,10 +134,11 @@ navbar a img:hover{
     border-radius: 1.5rem;
     cursor: pointer;
     transition: transform 0.5s ease-in-out;
+    text-decoration: none;
     /* Changed 'size' to 'transform' */
 }
 
-.heading button:hover {
+.btn12:hover {
     background: linear-gradient(135deg, #67df04, #2fdb04c3);
     /* Corrected rad to deg */
     
