--- a/Landing Page/assets/style.css
+++ b/Landing Page/assets/style.css
@@ -61,7 +61,7 @@ navbar a img:hover {
 .page2,
 .page3,
 .page4 {
-    position: relative;
+    /* position: relative; */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -242,4 +242,78 @@ navbar a img:hover {
 .page {
     position:sticky;
     top: 0;
+}
+
+.page3 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100%;
+}
+
+.card {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    transform-origin: center center;
+    width: 40vw;
+    height: 65vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(21, 17, 17, 0.8);
+    border-radius: 10px;
+    transition: background-color 0.5s ease;
+    overflow: hidden;
+}
+
+.img-cont {
+    width: 40vw;
+    height: 45vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+
+.img-cont img {
+    width: 40vw;
+    height: 45vh;
+    object-fit: cover;
+    
+}
+
+.desc {
+    font-family: Euro;
+    color: #f0f0f0;
+    margin-top: 1vw;
+    padding: 0 2vw;
+    text-align: center;
+}
+
+.btn123 {
+    position: absolute;
+        bottom: 10%;
+        left: 50%;
+        transform: translateX(-50%);
+        transform-origin: center center;
+    background: linear-gradient(120deg, #1c8303, #028011);
+    color: #fff;
+    font-family: EuroDemi;
+    font-size: 1.4vw;
+    border: none;
+    padding: .8vw 1.7vw;
+    border-radius: 1.5rem;
+    cursor: pointer;
+    text-decoration: none;
+    transition: transform 0.5s ease-in-out;
+    
+}
+
+.btn123:hover {
+    background: linear-gradient(135deg, #67df04, #2fdb04c3);
 }
