--- a/Landing Page/assets/style.css
+++ b/Landing Page/assets/style.css
@@ -264,17 +264,17 @@ z-index: -1;
     width: 100%;
 }
 
-.racesWrapper {
+.racesWrapper,.racesWrapper1 {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-10%, -45%);
+    transform: translate(-5%, -45%);
     transform-origin: center center;
 }
 
 
 
-.races {
+.races,.races1 {
     width: fit-content;
     display: flex;
     /* gap: 20vw; */
@@ -284,7 +284,7 @@ z-index: -1;
 .pg4con {
     flex-shrink: 0;
     /* Prevents flex items from shrinking */
-    margin-right: 10vw;
+    margin-right: 78vw;
     /* Adds space between cards */
 }
 
@@ -295,7 +295,7 @@ z-index: -1;
     transform: translate(-50%,-50%);
     transform-origin: center center; */
     width: 25vw;
-    height: 55vh;
+    height: 59vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -330,28 +330,13 @@ z-index: -1;
     text-align: center;
 }
 
-.btn123 {
-    position: absolute;
-        bottom: 10%;
-        left: 50%;
-        transform: translateX(-50%);
-        transform-origin: center center;
-    background: linear-gradient(120deg, #1c8303, #028011);
-    color: #fff;
-    font-family: EuroDemi;
-    font-size: 1.4vw;
-    border: none;
-    padding: .8vw 1.7vw;
-    border-radius: 1.5rem;
-    cursor: pointer;
-    text-decoration: none;
-    transition: transform 0.5s ease-in-out;
-    
+.desc p {
+    font-size: 1.2vw;
 }
 
-.btn123:hover {
-    background: linear-gradient(135deg, #67df04, #2fdb04c3);
-}
+
+
+
 
 .page3 video {
     height: 150vh;
