--- a/Landing Page/assets/style.css
+++ b/Landing Page/assets/style.css
@@ -340,8 +340,9 @@ z-index: -1;
 
 
 
-.page3 video {
-    height: 150vh;
+.page3 video,
+.page4 video {
+    height: 120vh;
         /* Set height to 100vh (viewport height) */
         width: 100vw;
         /* Set width to 100vw (viewport width) */
@@ -350,6 +351,6 @@ z-index: -1;
         z-index: -1;
 }
 
-/* .page3 {
-    height: 500vh;
-} */
+.page3,.page4 {
+    height: 120vh;
+}
