--- a/public/landingpage/assets/style.css
+++ b/public/landingpage/assets/style.css
@@ -12,7 +12,63 @@
     font-family: Euro;
     src: url(./EurostileLTProUnicode.otf);
 }
+/* loader */
+.loader {
+    height: 100%;
+    width: 100%;
+    background: linear-gradient(135deg, #239c05, #83ac6e,#239c05);
+    z-index: 999;
+    position: fixed;
+    top: 0;
+    transition: all linear .6s;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
+.loader h1 {
+    font-family: EuroDemi;
+    color: #f0f0f0;
+    font-size: 5vw;
+    position: absolute;
+    opacity: 0;
+    animation-name: load;
+    animation-duration: .8s;
+    animation-delay: .8s;
+    animation-timing-function: linear;
+}
+
+.loader h1:nth-child(2){
+    animation-delay: 1.6s;
+}
+
+.loader h1:nth-child(3){
+    animation-delay: 2.4s;
+}
+
+.loader h1:nth-child(4) {
+    animation-delay: 3.2s;
+}
+
+.loader h1:nth-child(5) {
+    animation-delay: 4s;
+}
+
+@keyframes load {
+    0% {
+        opacity: 0;
+    }
+    10% {
+        opacity: 1;
+    }
+    90% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
+}
+/* loader over */
 body {
     margin: 0;
     transition: opacity 0.5s ease-in-out;
