--- a/public/landingpage/assets/style.css
+++ b/public/landingpage/assets/style.css
@@ -378,12 +378,14 @@ z-index: -1;
     justify-content: center;
     align-items: center;
     overflow: hidden;
+    padding-top: 1vw;
 }
 
 .img-cont img {
-    width: 40vw;
+    padding: 1vw;
+    width: fit-content;
     height: 45vh;
-    object-fit: contain;
+    object-fit: cover;
     
 }
 
