--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -6,7 +6,7 @@
         <div class="main-nav">
         <a href="/home">Home</a>
         <a href="#">Dashboard</a>
-        <a href="#">Quizzes</a>
+        <a href="/quizzes">Quizzes</a>
         <a href="/listings">Your Doctor</a>
         <a href="#">Healing Huddles</a>
         <a href="/feedback">Feedback</a>
