--- a/views/users/indext.ejs
+++ b/views/users/indext.ejs
@@ -1,12 +1,12 @@
 <% layout('/layouts/boilerplate') %>
 <body>
-    <div class="loader">
+    <!-- <div class="loader">
         <h1>LET'S</h1>
         <h1>TAKE</h1>
         <h1>A</h1>
         <h1>DEEP</h1>
         <h1>BREATH</h1>
-    </div>
+    </div> -->
     <div id="main" class="main">
         <div class="page1 page" id="home">
             <video src="landingpage//assets/landing video.mp4" autoplay muted loop></video>
@@ -70,7 +70,7 @@
                     <a class="pg4con">
                         <div class="card">
                             <div class="img-cont">
-                                <img src="landingpage/assets/Login Page/Screenshot (339).png" alt="Example 1">
+                                <img src="https://www.stylecraze.com/wp-content/uploads/2013/03/1868-What-Is-Yoga-And-What-Are-Its-Benefits-ss.jpg" alt="Example 1">
                             </div>
                             <div class="desc">
                                 <h2>Mediation and Yoga</h2>
