--- a/views/includes/nav.ejs
+++ b/views/includes/nav.ejs
@@ -10,6 +10,8 @@
           <a class="nav-link"  href="/dashboard">Dashboard</a>
           <a class="nav-link" href="/listings">All Doctors</a>
           <a class="nav-link" href="/listings/new">Add new Listing</a>
+          <a class="nav-link" href="/healings">All Clubs</a>
+          <a class="nav-link" href="/healings/new">Add new Club</a>
         </div>
       </div>
     </div>
