--- a/views/users/indext.ejs
+++ b/views/users/indext.ejs
@@ -78,10 +78,10 @@
                             </div>
                         </div>
                     </a>
-                    <a class="pg4con">
+                    <a class="pg4con" href="/quizzes">
                         <div class="card">
                             <div class="img-cont">
-                                <img src="landingpage/assets/Login Page/Screenshot (339).png" alt="Example 1">
+                                <img src="https://img.freepik.com/free-vector/psychiatrist-concept-mental-health-diagnostic-doctor-treating-human-mind-psychological-test-help-thoughts-emotions-analysis-vector-illustration-cartoon-style_613284-1400.jpg" alt="Example 1">
                             </div>
                             <div class="desc">
                                 <h2>Quizzes</h2>
