--- a/views/users/indext.ejs
+++ b/views/users/indext.ejs
@@ -1,12 +1,12 @@
 <% layout('/layouts/boilerplate') %>
 <body>
-    <!-- <div class="loader">
+    <div class="loader">
         <h1>LET'S</h1>
         <h1>TAKE</h1>
         <h1>A</h1>
         <h1>DEEP</h1>
         <h1>BREATH</h1>
-    </div> -->
+    </div>
     <div id="main" class="main">
         <div class="page1 page" id="home">
             <video src="landingpage//assets/landing video.mp4" autoplay muted loop></video>
