--- a/public/landingpage/Feedback/style.css
+++ b/public/landingpage/Feedback/style.css
@@ -321,3 +321,47 @@ h1 {
   box-shadow: 2px 2px 50px black;
 }
 
+/* flash msg */
+.flash-message {
+  display: flex;
+  position:absolute;
+  right: 0px;
+  padding: 15px;
+  border: 1px solid transparent;
+  border-radius: 4px;
+  position: relative;
+  z-index: 100;
+  display: flex;
+  justify-content: space-between; /* Space between text and button */
+  align-items: center;
+}
+
+.flash-message.success {
+  background-color: #d4edda;
+  color: #155724;
+  border-color: #c3e6cb;
+}
+
+.flash-message.error {
+  background-color: #f8d7da;
+  color: #721c24;
+  border-color: #f5c6cb;
+}
+
+.close-btn {
+  position: absolute;
+  top: 50%;
+  right: 15px;
+  transform: translateY(-50%);
+  background: none;
+  border: none;
+  font-size: 20px;
+  font-weight: bold;
+  cursor: pointer;
+  color: inherit;
+}
+
+.close-btn:hover {
+  color: #000;
+}
+
