--- a/views/users/feedback.ejs
+++ b/views/users/feedback.ejs
@@ -3,43 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Feedback</title>
     <link rel="stylesheet" href="landingpage/Feedback/style.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
 </head>
+
 <body>
-  
+  <% if (messages.success) { %>
+    <div class="flash-message success">
+        <span><%= messages.success %></span>
+        <button class="close-btn" onclick="this.parentElement.style.display='none';">&times;</button>
+    </div>
+  <% } %>
+
+  <% if (messages.error) { %>
+    <div class="flash-message error">
+        <span><%= messages.error %></span>
+        <button class="close-btn" onclick="this.parentElement.style.display='none';">&times;</button>
+    </div>
+  <% } %>
+
   <video autoplay muted loop id="bgVideo">
     <source src="landingpage/Feedback/vid2 - Made with Clipchamp.mp4" type="video/mp4">
     Your browser does not support HTML5 video.
- </video>
- <div class="headi">
-   <h1 id=".ani">Get <br>in <br> touch</h1>
-   <p id=".anu">We'd love to hear from you! <br> Send us a message <br>and we'll do our best to help.</p>
- </div>
-    <div class="form">
+  </video>
+  
+  <div class="headi">
+    <h1 id=".ani">Get <br>in <br> touch</h1>
+    <p id=".anu">We'd love to hear from you! <br> Send us a message <br>and we'll do our best to help.</p>
+  </div>
 
-      
-        <div class="mail"></div>
-        <h1>Mail form</h1>
-        <form action="">
-          <input type="text" placeholder="Your name" />
-      
-          <input type="text" placeholder="E-mail" />
-      
-          <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
-      
-          <div class="submit">Submit</div>
-      
-        </form>
+  <div class="form">
+    <h1>Mail form</h1>
+    <form method="POST" action="/feedback">
+      <input type="text" name="name" placeholder="Your name" required />
+      <input type="email" name="email" placeholder="E-mail" required />
+      <textarea name="message" cols="30" rows="10" placeholder="Message" required></textarea>
+      <div class="submit">
+        <button type="submit">Submit</button>
       </div>
-      
-      <div class="ok_message">
-        <span>We'll answer you soon!</span>
-      </div>
-    
-      <script src="landingpage/Feedback/script.js"></script>
+    </form>
+  </div>
+  
+  <div class="ok_message">
+    <span>We'll answer you soon!</span>
+  </div>
+  
+  <script src="landingpage/Feedback/script.js"></script>
 </body>
 </html>
