--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -3,12 +3,12 @@
         <a href="#" id="ic">
             <img src="landingpage/assets/logo.png" alt="Mood Map Logo" class="logo-large">
         </a>
-        <div class="main-nav">
+        <div class="main-nav" style="padding-top:8vw ;">
         <a href="/home">Home</a>
-        <a href="#">Dashboard</a>
         <a href="/quizzes">Quizzes</a>
         <a href="/listings">Your Doctor</a>
         <a href="/healings">Healing Huddles</a>
+        <a href="/yoga">Yoga and Meditations</a>
         <a href="/feedback">Feedback</a>
         <a href="#">Contact Us</a>
         </div>
