--- a/views/includes/nav.ejs
+++ b/views/includes/nav.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md bg-body-light border-bottom sticky-top">
+<nav class="navbar navbar-expand-md bg-body-light border-bottom sticky-top" style="background:rgb(18,91,21);">
     <div class="container-fluid">
       <a class="navbar-brand" href="/"><i class="fa-regular fa-compass"></i></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" >
@@ -6,12 +6,13 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link"  href="/home">Home</a>
-          <a class="nav-link"  href="/dashboard">Dashboard</a>
-          <a class="nav-link" href="/listings">All Doctors</a>
-          <a class="nav-link" href="/listings/new">Add new Listing</a>
-          <a class="nav-link" href="/healings">All Clubs</a>
-          <a class="nav-link" href="/healings/new">Add new Club</a>
+          <a class="nav-link"  href="/home" ><b>Home</b></a>
+          <a class="nav-link"  href="/quizzes " ><b>Quizess</b></a>
+          <a class="nav-link" href="/listings" ><b>All Doctors</b></a>
+          <a class="nav-link" href="/listings/new" ><b>Add new Listing</b></a>
+          <a class="nav-link" href="/healings" ><b>All Clubs</b></a>
+          <a class="nav-link" href="/healings/new" ><b>Add new Club</b></a>
+          <a class="nav-link" href="/yoga" ><b>Yoga</b></a>
         </div>
       </div>
     </div>
