--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -18,6 +18,11 @@
         background-size: 100% 100%;
     }
 
+    body::-webkit-scrollbar {
+    width: 0;
+    background: transparent;
+    }
+
     .main {
         background-color: rgba(255, 255, 255, 0.219);
         backdrop-filter: blur(2px);
