--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,6 +5,10 @@ body{
     min-height: 100vh;
     background-color: rgb(232, 245, 232) !important;
 }
+body::-webkit-scrollbar {
+    width: 0;
+    background: transparent;
+}
 .bord{
     border-radius: 1rem !important;
 }
