--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,4 +1,5 @@
 <div class="foot page">
+    <h1>About Us</h1>
     <footer>
         <div class="wave">
             <div class="wave" id="wave1"></div>
