--- a/views/users/indext.ejs
+++ b/views/users/indext.ejs
@@ -35,19 +35,19 @@
             <video src="landingpage/assets/page4 video - Made with Clipchamp.mp4" autoplay muted loop></video>
             <div class="racesWrapper1">
                 <div class="races1">
-                    <a class="pg4con">
+                    <a class="pg4con" href="/listings">
                         <div class="card">
                             <div class="img-cont">
-                                <img src="landingpage/assets/Login Page/Screenshot (339).png" alt="Example 1">
+                                <img src="https://t3.ftcdn.net/jpg/02/25/70/72/360_F_225707294_V0jKFrHm1Bm5mLQjTAhKFplaWQIgdHby.jpg" alt="Example 1">
                             </div>
                             <div class="desc">
-                                <h2>Dashboard</h2>
+                                <h2>Professionals</h2>
                                 <p>This is an example of a mood card. It shows a picture of a person with a happy face and a smiling mouth. The card has a title, a description, and a link to a video or article that provides more information about the person's mood.</p>
                             </div>
                         </div>
                     </a>
                     
-                    <a class="pg4con">
+                    <a class="pg4con" href="/healings">
                         <div class="card">
                             <div class="img-cont">
                                 <img src="landingpage/assets/Healing-huddles-pic-1.jpg" alt="Example 1">
@@ -67,7 +67,7 @@
             <div class="racesWrapper">
                 <div class="races">
                     
-                    <a class="pg4con">
+                    <a class="pg4con" href="/yoga">
                         <div class="card">
                             <div class="img-cont">
                                 <img src="https://www.stylecraze.com/wp-content/uploads/2013/03/1868-What-Is-Yoga-And-What-Are-Its-Benefits-ss.jpg" alt="Example 1">
